--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-form">
+<!-- <div class="login-form">
     <h2>Connexion</h2>
     <form (ngSubmit)="onLogin()">
       <div>
@@ -11,5 +11,5 @@
       </div>
       <button type="submit">Se connecter</button>
     </form>
-  </div>
+  </div> -->
   
