--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -33,9 +33,11 @@ nav{
 
  .search{
     border-radius: 15px;
-    height: 30px;
+    height: 40px;
     width: 400px;
-    margin-left: 600px;
+    background-color: #ebeaea;
+    border: 1px solid #f5f5f5;
+    margin-left: 650px;
     margin-bottom: 50px;
   } 
 form input, textarea{
