--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-login></app-login>
-<app-contact></app-contact>
+<!-- <app-login></app-login>
+<app-contact></app-contact> -->
+<router-outlet></router-outlet>
