--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,6 +15,7 @@
             <nav>
             <button (click)="openAddContactPopup()">Ajouter un contact</button>
              <button (click)="openTrashPopup()">Voir la corbeille</button>
+             <button (click)=" onLogout()">Déconnexion</button>
             </nav>
         </header>
         
